<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Login_email_hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_pass"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Login_pass_hint"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Registro"
            android:text="@string/btn_register"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_Iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="Ingreso"
            android:text="@string/btn_login"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>