<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hoteles">

    <fragment
        android:id="@+id/nav_hoteles"
        android:name="com.sc703.proyecto.ui.hoteles.HotelesFragment"
        android:label="@string/menu_hoteles"
        tools:layout="@layout/fragment_hoteles" />

    <fragment
        android:id="@+id/nav_soporte"
        android:name="com.sc703.proyecto.ui.soporte.SoporteFragment"
        android:label="@string/menu_soporte"
        tools:layout="@layout/fragment_soporte" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sc703.proyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_Perfil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sc703.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.sc703.proyecto.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />
</navigation>