<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imv_Imagen"
                android:layout_width="150dp"
                android:layout_height="150dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Storage_Image_name"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edt_NombreImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Storage_Image_name_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_Buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/btn_find" />
            <Button
                android:id="@+id/btn_Cargar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/btn_upload"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/btn_Descargar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/btn_Download" />
        </LinearLayout>

<!--        DATOS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/idEdtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:hint="@string/Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/idEdtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/UsuerPhone"
                android:importantForAutofill="no"
                android:inputType="phone" />


            <EditText
                android:id="@+id/idEdtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:focusable="false"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/btn_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/btn_Save" />

        </LinearLayout>



    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>