<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hoteles"
            android:icon="@drawable/ic_menu_hoteles"
            android:title="@string/menu_hoteles" />

        <item
            android:id="@+id/nav_soporte"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:title="@string/menu_soporte" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_Perfil" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_menu_salir"
            android:title="@string/menu_salir" />

    </group>
</menu>